[metadata]
name = iauto
version = attr: iauto.VERSION
author = shellc
author_email = shenggong.wang@gmail.com
description = iauto is a Python library for intelligent automation
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
url = https://github.com/shellc/ia
keywords = AI, Automation, LLM, RPA
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
packages = find:
install_requires = file: requirements.txt
include_package_data = True

[options.package_data]
* = *.json, *.yml, *.yaml

[options.entry_points]
console_scripts =
    executable-name = iauto:__main__

[options.extras_require]

[options.packages.find]
exclude =
    tests/*

[flake8]
ignore = F401
max-line-length = 120

[tool.isort]
multi_line_output = 3
