[metadata]
name = iauto
version = attr: iauto.VERSION
author = shellc
author_email = shenggong.wang@gmail.com
description = iauto is a low-code engine for building and deploying AI agents
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
url = https://github.com/shellc/iauto
keywords = AI, Automation, LLM, RPA
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
packages = find:
install_requires = file: requirements-base.txt
include_package_data = True

[options.package_data]
* = *.json, *.yml, *.yaml, *.png

[options.entry_points]
console_scripts =
    ia = iauto.__main__:main

[options.extras_require]
dev = file: requirements-dev.txt
all = file: requirements.txt
playground = file: requirements-playground.txt
sql = file: requirements-sql.txt
appium = file: requirements-appium.txt
playwright = file: requirements-playwright.txt
llm = file: requirements-llm.txt
llm-local = file: requirements-llm-local.txt

[options.packages.find]
exclude =
    tests/*

[flake8]
per-file-ignores =
    # imported but unused
    __init__.py: F401
    _buildin.py: F401
max-line-length = 120

[tool.isort]
multi_line_output = 3
